--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,63 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+  .card{
+  	height: 200px;
+  	width: 150px;
+  	border: 1px solid black;
+  	background-color: yellow;
+  	border-radius: 10px;
+    float: left;
+    margin: 8%;
+  }
+
+.board {
+  height: 80%;
+  width: 50%;
+  display: inline-block;
+}
+
+
+h1{
+  color: teal;
+  text-align: center;
+}
+
+h2{
+  color: gold;
+  text-align: center;
+}
+
+.name{
+  color :  #ff0000;
+}
+
+footer{
+  text-align: center;
+  background-color: #808080;
+  
+
+}
+
+nav {
+  background-color: #808080;
+      }
+
+a {
+        background-color: #ffbf00;
+        color: white;
+        text-decoration: none;
+        display: block;
+        float: left;
+        padding: 35px;
+      }
+
+a:hover {
+        background-color: #ee5f3c;
+      }
+
+.clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
