--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -25,6 +25,10 @@ h2{
   text-align: center;
 }
 
+p{
+  text-align: center
+}
+
 .name{
   color :  #ff0000;
 }
@@ -61,3 +65,8 @@ a:hover {
         height: 0;
         font-size: 0;
       }
+
+img {
+  height: 200px;
+  width: 150px;
+}
